--- a/FishManagementSystem.Server/appsettings.json
+++ b/FishManagementSystem.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "FishDB": "server=192.168.211.133;port=3306;user=root;password=!QAZ2wsx;database=testdb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
