--- a/FishManagementSystem.Server/FishManagementSystem.Server.csproj
+++ b/FishManagementSystem.Server/FishManagementSystem.Server.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -13,13 +13,13 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="SqlSugarCore" Version="5.1.4.158" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\fishmanagementsystem.client\fishmanagementsystem.client.esproj">
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
+    <ProjectReference Include="..\FishManagementSystem.Models\FishManagementSystem.Models.csproj" />
+    <ProjectReference Include="..\FishManagementSystem.SqlSugar\FishManagementSystem.SqlSugar.csproj" />
   </ItemGroup>
 
 </Project>
