--- a/FishManagementSystem.Server/appsettings.json
+++ b/FishManagementSystem.Server/appsettings.json
@@ -1,12 +1,10 @@
 {
   "ConnectionStrings": {
-    "FishDB": "server=192.168.211.133;port=3306;user=root;password=!QAZ2wsx;database=testdb"
+    "FishDB": "server=192.168.211.133;port=3306;user=root;password=!QAZ2wsx;database=FishDatabase"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "LoggingConfigs": {
+    "Name": "nlog", //nlog or log4net
+    "ConfigFile": "Configs/nLog.config" // Configs/log4net.config
   },
   "AllowedHosts": "*"
 }
