--- a/FishManagementSystem.Server/FishManagementSystem.Server.csproj
+++ b/FishManagementSystem.Server/FishManagementSystem.Server.csproj
@@ -10,16 +10,35 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
-      <Version>8.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="SqlSugarCore" Version="5.1.4.158" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <Content Remove="Configs\nLog.config" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\FishManagementSystem.Models\FishManagementSystem.Models.csproj" />
-    <ProjectReference Include="..\FishManagementSystem.SqlSugar\FishManagementSystem.SqlSugar.csproj" />
+    <None Include="Configs\nLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="8.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="Autofac.Extras.DynamicProxy" Version="7.1.0" />
+    <PackageReference Include="log4net" Version="2.0.17" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
+      <Version>8.*-*</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="NLog" Version="5.3.2" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="5.3.11" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\FishManagementSystem.Autofac\FishManagementSystem.Autofac.csproj" />
+    <ProjectReference Include="..\FishManagementSystem.BusinessService\FishManagementSystem.BusinessService.csproj" />
+    <ProjectReference Include="..\FishManagementSystem.DBModels\FishManagementSystem.DBModels.csproj" />
+    <ProjectReference Include="..\FishManagementSystem.IBussinessService\FishManagementSystem.IBussinessService.csproj" />
+    <ProjectReference Include="..\FishManagementSystem.IoC\FishManagementSystem.IoC.csproj" />
   </ItemGroup>
 
 </Project>
