--- a/fishmanagementsystem.client/package.json
+++ b/fishmanagementsystem.client/package.json
@@ -12,6 +12,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.7.2",
     "element-plus": "^2.7.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
