删除冗余项

--- a/FishManagementSystem.BusinessService/FishManagementSystem.BusinessService.csproj
+++ b/FishManagementSystem.BusinessService/FishManagementSystem.BusinessService.csproj
@@ -24,6 +24,7 @@
 		<ProjectReference Include="..\FishManagementSystem.DBModels\FishManagementSystem.DBModels.csproj" />
 		<ProjectReference Include="..\FishManagementSystem.IBussinessService\FishManagementSystem.IBussinessService.csproj" />
 		<ProjectReference Include="..\FishManagementSystem.IDBModels\FishManagementSystem.IDBModels.csproj" />
+		<ProjectReference Include="..\FishManagementSystem.Mapping\FishManagementSystem.Mapping.csproj" />
 	</ItemGroup>
 
 </Project>
