--- a/FishManagementSystem.Server/appsettings.Development.json
+++ b/FishManagementSystem.Server/appsettings.Development.json
@@ -6,5 +6,11 @@
     "Name": "nlog", //nlog or log4net
     "ConfigFile": "Configs/nLog.config" // Configs/log4net.config
   },
+  "Jwt": {
+    "SecretKey": "ryayu@outlook.com",
+    "Issuer": "ryanyu", // 颁发者
+    "Audience": "ryanyu", // 接收者
+    "Expired": 30 // 过期时间（30min）
+  },
   "AllowedHosts": "*"
 }
