修改model，添加调试api

--- a/FishManagementSystem.Server/FishManagementSystem.Server.csproj
+++ b/FishManagementSystem.Server/FishManagementSystem.Server.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Controllers\User\LoginController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Configs\nLog.config" />
   </ItemGroup>
 
