--- a/FishManagementSystem.Server/appsettings.Development.json
+++ b/FishManagementSystem.Server/appsettings.Development.json
@@ -7,7 +7,7 @@
     "ConfigFile": "Configs/nLog.config" // Configs/log4net.config
   },
   "JwtConfig": {
-    "SecretKey": "ryayu@outlook.com",
+    "SecretKey": "ryayu@outlook.com,ryayu@outlook.com,ryayu@outlook.com,ryayu@outlook.com",
     "Issuer": "ryanyu", // 颁发者
     "Audience": "ryanyu", // 接收者
     "Expired": 30 // 过期时间（30min）
