--- a/FishManagementSystem.SSO/FishManagementSystem.SSO.csproj
+++ b/FishManagementSystem.SSO/FishManagementSystem.SSO.csproj
@@ -5,12 +5,15 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <UserSecretsId>6efa1dca-44b8-44a1-945e-9ef38ad3a546</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="2.0.17" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.6" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="NLog" Version="5.3.2" />
     <PackageReference Include="NLog.Extensions.Logging" Version="5.3.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
@@ -22,6 +25,12 @@
     <ProjectReference Include="..\FishManagementSystem.IoC\FishManagementSystem.IoC.csproj" />
     <ProjectReference Include="..\FishManagementSystem.JWT\FishManagementSystem.JWT.csproj" />
     <ProjectReference Include="..\FishManagementSystem.Swagger\FishManagementSystem.Swagger.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Dockerfile">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
