--- a/FishManagementSystem.SSO/appsettings.json
+++ b/FishManagementSystem.SSO/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "FishDB": "server=192.168.211.133;port=3306;user=root;password=!QAZ2wsx;database=FishDatabase"
+  },
+  "LoggingConfigs": {
+    "Name": "nlog", //nlog or log4net
+    "ConfigFile": "Configs/nLog.config" // Configs/log4net.config
+  },
+  "JwtConfig": {
+    "SecretKey": "ryayu@outlook.com,ryayu@outlook.com,ryayu@outlook.com,ryayu@outlook.com",
+    "Issuer": "ryanyu", // 颁发者
+    "Audience": "ryanyu", // 接收者
+    "Expired": 30 // 过期时间（30min）
   },
   "AllowedHosts": "*"
 }
